examples/fail/type_mismatch.uplp
-- category = "error"
--
-- [metadata]
-- error = "Type.mismatch"
--
-- [metadata.expectation]
-- expected = "Num"
-- got = "Unit"
1 + ()